uso de spring security

--- a/pedidos/bin/main/application.properties
+++ b/pedidos/bin/main/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=servicio-productos
 server.port=8080
+spring.datasource.username=angeldev
+spring.datasource.password=Code123
