--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=servicio-productos
 server.port=8080
+spring.datasource.username=angeldev
+spring.datasource.password=Code123
